fixed header alignment

--- a/css/header.css
+++ b/css/header.css
@@ -7,14 +7,15 @@ body {
 }
 header {
   background-color: white;
-  padding-top: 20px;
-  padding-bottom: 20px;
   border-bottom: solid #dcdcdc;
   /*THE FOLLOWING FOR A STICKY HEADER!*/
   position: sticky;
   width: 100%;
   top: 0;
-  z-index: 99;
+  z-index: 999;
+
+  padding-top: 20px;
+  padding-bottom: 10px;
 }
 
 a {
@@ -28,34 +29,37 @@ a {
 .center {
   object-fit: contain;
   text-align: center;
-  width: 20%;
+
   z-index: 1;
   background-color: rgb(255, 255, 255);
 }
 
 .center img {
-  padding-top: 4px;
-  width: 100%;
-  height: 100%;
   object-fit: contain;
-  /*
-  top: 50%;
-  transform: translate(-10%, 10%);
-  */
 }
 .right {
-  width: 40%;
+  width: 100%;
   background-color: rgb(255, 255, 255);
+  margin: auto;
 }
 
 .left {
-  width: 40%;
-  background-color: rgb(255, 255, 255);
+  width: 100%;
+  background-color: rgb(255 238 238);
+  margin: auto;
 }
 
-.left li,
-.right li {
-  background-color: white;
+.left ul {
+  width: 100%;
+  display: grid;
+  background: white;
+  grid-template-columns: 1fr 1fr;
+}
+
+.right ul {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 /**these are styling to make the dropdown menu on the profile pic*/
 .right ul li {
@@ -72,7 +76,7 @@ a {
 
 /**makes it wide enough so all text can fit in one line*/
 .right ul li ul li {
-  width: 60px;
+  width: 100px;
   background-color: #f79e9e; /**bg for dropdown*/
   border-style: solid #dcdcdc;
 }
@@ -88,35 +92,17 @@ a {
   padding-right: 3px;
 }
 /**-------DROP DOWN MENY=U----------------*/
-
-#home {
-  margin-left: 15%;
-  margin-right: 20%;
-  padding-right: 2%;
-}
-
-#signup {
-  margin-left: 20%;
-  margin-right: 20%;
-  padding-left: 2%;
-}
-
-#post {
-  margin-right: 30%;
-  padding-left: 2%;
-}
-#fav {
-  margin-right: 2%;
-  margin-left: 2%;
-  padding-left: 2%;
-}
 .navbar {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   background-color: white;
-
+  width: 100%;
+  max-width: 1100px;
   align-items: center;
   justify-content: center;
+  margin: auto;
 }
+
 .navbar ul {
   list-style: none;
   padding: 0;
@@ -128,8 +114,9 @@ a {
 }
 
 .nav_avatar {
-  width: 27px;
-  height: 27px;
+  width: 100%;
+  max-width: 32px;
+  aspect-ratio: 1/1;
   object-fit: fill;
   border-radius: 50%;
   border: 2px solid #dcdcdc;
@@ -142,7 +129,6 @@ a {
 
 /* Footer */
 footer p {
-  margin-top: 10px;
   position: fixed;
   text-align: right;
   border-top: solid #dcdcdc;
