--- a/css/home.css
+++ b/css/home.css
@@ -14,18 +14,20 @@
 .mySlides {
   display: none;
 }
-
+.mySlides.fade {
+  position: relative;
+}
 .mySlides img {
   aspect-ratio: 21/9;
   padding: 2%;
   margin: auto;
-  height: 500px;
+  width: 1100px;
   object-fit: cover;
 }
 /*places if below the pic gallery on bottom left corner*/
 .numbertext {
   bottom: 0;
-  left: 35px;
+  left: 20px;
   position: absolute;
   color: black;
 }
